<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.yesnonononononi</groupId>
    <artifactId>lingXi-harness-agent</artifactId>
    <version>1.0.0</version>


    <name>LingXi-harness-project</name>
    <description>lingxi-harness-agent-starter</description>

    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>yesnonononononi</name>
            <email>huicao833@outlook.com</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/yesnonononononi/LingXi-starter.git</connection>
        <url>
            https://github.com/yesnonononononi/LingXi-starter
        </url>
    </scm>

    <modules>
        <module>harness-core</module>
        <module>harness-adapter-langchain4j</module>
        <module>lingxi-harness-spring-boot-starter</module>
        <module>harness-spring-boot-autoconfigure</module>
        <module>harness-example</module>
        <module>harness-runtime</module>
        <module>harness-base-tools</module>
    </modules>


    <properties>
        <java.version>21</java.version>
        <lingxi-harness.version>1.0.0</lingxi-harness.version>
        <langchain4j.version>1.11.0</langchain4j.version>
        <lombok.version>1.18.46</lombok.version>
        <java-diff-utils.version>4.15</java-diff-utils.version>
    </properties>



    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>io.github.yesnonononononi</groupId>
                <artifactId>harness-runtime</artifactId>
                <version>${lingxi-harness.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.yesnonononononi</groupId>
                <artifactId>lingxi-harness-spring-boot-starter</artifactId>
                <version>${lingxi-harness.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.yesnonononononi</groupId>
                <artifactId>harness-core</artifactId>
                <version>${lingxi-harness.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.yesnonononononi</groupId>
                <artifactId>harness-adapter-langchain4j</artifactId>
                <version>${lingxi-harness.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.yesnonononononi</groupId>
                <artifactId>harness-spring-boot-autoconfigure</artifactId>
                <version>${lingxi-harness.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.yesnonononononi</groupId>
                <artifactId>harness-base-tools</artifactId>
                <version>${lingxi-harness.version}</version>
            </dependency>


            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <type>pom</type>
                <scope>import</scope>
                <version>4.1.1</version>
            </dependency>



            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-core</artifactId>
                <version>${langchain4j.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-open-ai</artifactId>
                <version>${langchain4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>25.0.0</version>
            </dependency>
            <dependency>
                <groupId>io.github.java-diff-utils</groupId>
                <artifactId>java-diff-utils</artifactId>
                <version>${java-diff-utils.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jspecify</groupId>
                <artifactId>jspecify</artifactId>
                <version>1.0.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${java.version}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.8.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>  <!-- 对应 settings.xml server.id-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.7</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <keyname>49A098D19B2F21F2</keyname>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
